Exposed more stats directly through the decorator for exposure via JMX. Added a separate miss counter since totalOperations is increment for more than just hits/misses (removes, size calcs, etc)